<resources>
    <string name="app_name">SecurityIAM</string>

    <string name="txt_login">Login</string>
    <string name="txt_register">Register</string>
    <string name="txt_name">Name</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="txt_confirm_password">Confirm Password</string>

    <string name="txt_register_now">Register now</string>
    <string name="txt_login_now">Login now</string>
    <string name="txt_register_question">Don\'t have an account?</string>
    <string name="txt_login_question">Already have an account?</string>
    
    <string name="txt_dashboard_title">Dashboard</string>"
</resources>